<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pets.PetCreateFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/petCreate_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="Pet name"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:helperText="@string/name_requirements"
        app:hintTextColor="@color/dark_gold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/petCreate_name_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/petCreate_image2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/petCreate_name"
        app:layout_constraintVertical_bias="0.057"
        tools:src="@drawable/baseline_no_photography_24" />

    <Button
        android:id="@+id/petCreate_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload icon for pet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toEndOf="@id/petCreate_image2"
        app:layout_constraintTop_toBottomOf="@id/petCreate_name"
        app:layout_constraintVertical_bias="0.095" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/petCreate_pickZone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:hintTextColor="@color/dark_gold"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintTop_toBottomOf="@id/petCreate_image2"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="Assigned zone">
        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/pickZone_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/petCreate_pickDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:hintTextColor="@color/dark_gold"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintTop_toBottomOf="@id/petCreate_pickZone"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="Assigned device"
        >
        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/pickDevice_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/petCreate_enableNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Receive notifications?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/petCreate_pickDevice"
        app:layout_constraintVertical_bias="0.115" />

    <Button
        android:id="@+id/petCreate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/petCreate_enableNotifications"
        app:layout_constraintVertical_bias="0.654" />

    <Button
        android:id="@+id/petCreate_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:backgroundTint="@color/flax"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toEndOf="@id/petCreate_btn"
        app:layout_constraintTop_toBottomOf="@id/petCreate_enableNotifications"
        app:layout_constraintVertical_bias="0.654" />

</androidx.constraintlayout.widget.ConstraintLayout>